gccida/g2/expand_eh_return
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_return/src/except.c:3808:21: error: use of undeclared identifier 'machine_mode'
v0 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), 2); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_return/src/obj/except.o] Error 1
